--- a/spring-security-cas-demo/src/main/resources/application.properties
+++ b/spring-security-cas-demo/src/main/resources/application.properties
@@ -1,5 +1,21 @@
 server.port=8080
 
+spring.datasource.url=jdbc:mysql://localhost:3306/db_ypm
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.max-idle=10
+spring.datasource.max-wait=10000
+spring.datasource.min-idle=5
+spring.datasource.initial-size=5
+spring.datasource.validation-query=SELECT 1
+spring.datasource.test-on-borrow=false
+spring.datasource.test-while-idle=true
+spring.datasource.time-between-eviction-runs-millis=18800
+spring.datasource.jdbc-interceptors=ConnectionState;SlowQueryReport(threshold=0)
+
 #spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+
+#flyway.baseline-on-migrate=true
